--- a/engineering.html
+++ b/engineering.html
@@ -65,8 +65,7 @@ main {
 <main id="summary">
   <hr>
   <h2>Summary of Relevant Experience:</h2>
-  <p>During my undergraduate program, I gained experience working in the student Machine Shop as a Manager and Supervisor. This gave me a familiarty with common manufacturing processes and experience with relevant tools (mills, lathes, welders).</p>
-  <p>Additonally, I worked with a team to design an ergonomic solution in collaboration with General Electric. I was the primary prototype designer, utilizing 3D printers to make the initial versions and then machining the final version.</p>
+  <p>During my undergraduate program, I gained experience working in the student Machine Shop as a Manager and Supervisor. This gave me a familiarty with common manufacturing processes and experience with relevant tools (mills, lathes, welders). Additonally, I worked with a team to design an ergonomic solution in collaboration with General Electric. I was the primary prototype designer, utilizing 3D printers to make the initial versions and then machining the final version.</p>
   <p>After graduating, I started working with Aerospace Automation Equipment under Electroimpact at Boeing. To improve the equipment reliability, I designed various retrofits primarily for 3D printing and also collaborated with engineering teams for more complex assemblies.</p>
   <p>In moving to the NYC area, I began working with Medical Device fixture design under Stryker. I primarily work with programming CMMs and designing simple yet robust fixtures while collaborating with an advanced engineering team.</p>
   <p> </p>
