--- a/games.html
+++ b/games.html
@@ -56,7 +56,7 @@ main {
   <p>Ben Warner's Unity Games Portfolio</p>
 </header>
 <sidenav>
-  <a href="index">Main</a>
+  <a href="index">Back to Main</a>
   <a href="#phageshift">PhageShift</a>
   <a href="#mazegame">aMAZEing</a>
   <a href="#spidercrane">SpiderCrane</a>
