--- a/engineering.html
+++ b/engineering.html
@@ -76,21 +76,23 @@ main {
 <main id="retrofits">
   <hr>
   <h2>Retrofit Parts:</h2>
-  <p> </p>
+  <p>These retrofits were designed with the intention of being 3D printed to enable rabid prototyping and immediate implementation. Using 3D printed material was feasible for these applications due to being in low-wear and low-stress environments in some cases. In other cases, being 3D printed allowed for break-away funtionality when other components are more critical.</p>
   <hr>
 </main>
 <hr>
 <main id="fixtures">
   <hr>
   <h2>Fixture Assemblies:</h2>
-  <p> </p>
+  <p>These fixtures were designed with the intention of holding parts of varying sizes in place while measuring with automated measuring tools and considering GD&T callouts, like CMMs. I focus on making ergonomic designs that fully constrain degrees of freedom, while aslo considering manufacturability and assembly. I work closely with a machinist to ensure that my design meets their expectations.</p>
   <hr>
 </main>
 <hr>
 <main id="personal">
   <hr>
   <h2>Personal Projects:</h2>
-  <p> </p>
+  <em><a href="https://www.thingiverse.com/benjiit/designs">My Thingiverse Page with some of my project files</a></em><br>
+  <p>In my spare time, I design and 3D print some basic assemblies for simple functions as needed. I have investigated a variety of 3D modeling softwares and found that AutoDesk Fusion 360 has the most inclusive toolset for my projects.</p>
+  <p>While designing and printing these relatively simple projects, I also investigate and retrofit my 3D printer as needed to improve quality and repeatability.</p>
   <hr>
 </main>
 <hr>
