--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@ main {
     <em><a href="mailto:bbwarne@g.clemson.edu">bbwarne@g.clemson.edu</a></em><br>
     LinkedIn:
     <em><a href="https://www.linkedin.com/in/benjamin-b-warner">https://www.linkedin.com/in/benjamin-b-warner</a></em><br>
+    Github:
+    <em><a href="https://github.com/benjiit/">@benjiit</a></em><br>
+    Thingiverse:
+    <em><a href="https://www.thingiverse.com/benjiit/designs">benjiit</a></em><br>
   </address>
   <hr>
 </main>
