engr viz update

--- a/engineering.html
+++ b/engineering.html
@@ -60,6 +60,7 @@ main {
   <a href="#retrofits">Retrofits</a>
   <a href="#fixtures">Fixtures</a>
   <a href="#personal">Personal Projects</a>
+  <a href="#earlyworks">Early Works</a>
 </sidenav>
 <hr>
 <main id="summary">
@@ -77,13 +78,30 @@ main {
   <hr>
   <h2>Retrofit Parts:</h2>
   <p>These retrofits were designed with the intention of being 3D printed to enable rabid prototyping and immediate implementation. Using 3D printed material was feasible for these applications due to being in low-wear and low-stress environments in some cases. In other cases, being 3D printed allowed for break-away funtionality when other components are more critical.</p>
+  <em>Catia:</em><br>
+  <image src="images/retrofits/bracketAttachment.jpg" width="27%" controls preload></image>
+  <image src="images/retrofits/fingersAssembler.jpg" width="17.5%" controls preload></image>
+  <image src="images/retrofits/fingersInstaller.jpg" width="25%" controls preload></image>
+  <br>
+  <em>Solidworks:</em><br>
+  <image src="images/retrofits/flextrack-hopperFunnelPic.png" width="21.5%" controls preload></image>
+  <image src="images/retrofits/flextrack-trayPic.png" width="51%" controls preload></image>
+  <image src="images/retrofits/quadbot-gripperPic.png" width="26%" controls preload></image>
+
   <hr>
 </main>
 <hr>
 <main id="fixtures">
   <hr>
   <h2>Fixture Assemblies:</h2>
-  <p>These fixtures were designed with the intention of holding parts of varying sizes in place while measuring with automated measuring tools and considering GD&T callouts, like CMMs. I focus on making ergonomic designs that fully constrain degrees of freedom, while aslo considering manufacturability and assembly. I work closely with a machinist to ensure that my design meets their expectations.</p>
+  <p>These fixtures were designed with the intention of holding parts of varying sizes in place while measuring with automated measuring tools and considering GD and T callouts, like CMMs. I focus on making ergonomic designs that fully constrain degrees of freedom, while aslo considering manufacturability and assembly. I work closely with a machinist to ensure that my design meets their expectations.</p>
+  <em>Solidworks:</em><br>
+  <image src="images/fixtures/normTester-detail.png" width="26%" controls preload></image>
+  <image src="images/fixtures/normTester-explode.png" width="25%" controls preload></image>
+  <br>
+  <em>Manufactured:</em><br>
+  <image src="images/fixtures/twopinch.jpg" width="15%" controls preload></image>
+  <image src="images/fixtures/tripinch.jpg" width="35%" controls preload></image>
   <hr>
 </main>
 <hr>
@@ -93,6 +111,30 @@ main {
   <em><a href="https://www.thingiverse.com/benjiit/designs">My Thingiverse Page with some of my project files</a></em><br>
   <p>In my spare time, I design and 3D print some basic assemblies for simple functions as needed. I have investigated a variety of 3D modeling softwares and found that AutoDesk Fusion 360 has the most inclusive toolset for my projects.</p>
   <p>While designing and printing these relatively simple projects, I also investigate and retrofit my 3D printer as needed to improve quality and repeatability.</p>
+  <em>Solidworks:</em><br>
+  <image src="images/myprojects/ocuMount-collapse.png" width="20%" controls preload></image>
+  <image src="images/myprojects/ocuMount-explode.png" width="20.5%" controls preload></image>
+  <image src="images/myprojects/watchCoverCollapse.jpg" width="19.3%" controls preload></image>
+  <image src="images/myprojects/watchCoverExplode.jpg" width="20%" controls preload></image>
+  <br>
+  <em>3D Printer Modifications:</em><br>
+  <image src="images/myprojects/lockingPlate-bedwire-guide.PNG" width="22%" controls preload></image>
+  <image src="images/myprojects/lockingKnob-n-Plate-pic.PNG" width="17%" controls preload></image>
+  <image src="images/myprojects/zinusTableEnclosure-Full.PNG" width="22%" controls preload></image>
+  <image src="images/myprojects/zinusTableEnclosure-pic.PNG" width="28%" controls preload></image>
+  <hr>
+</main>
+<hr>
+<main id="earlyworks">
+  <hr>
+  <h2>Early Works:</h2>
+  <p>These are some select examples of projects from my early years of learning CAD and working in engineering internships</p>
+  <em>Solidworks:</em><br>
+  <image src="images/earlyworks/infiniteRose.jpg" width="11%" controls preload></image>
+  <image src="images/earlyworks/printedVSfinal.JPG" width="15%" controls preload></image>
+  <image src="images/earlyworks/finished-bottom.JPG" width="25.5%" controls preload></image>
+  <image src="images/earlyworks/finished-closed-bottom.JPG" width="35%" controls preload></image>
+  <br>
   <hr>
 </main>
 <hr>
