--- a/engineering.html
+++ b/engineering.html
@@ -113,7 +113,7 @@ main {
   <p>While designing and printing these relatively simple projects, I also investigate and retrofit my 3D printer as needed to improve quality and repeatability.</p>
   <em>Solidworks:</em><br>
   <image src="images/myprojects/ocuMount-collapse.png" width="20%" controls preload></image>
-  <image src="images/myprojects/ocuMount-explode.png" width="20.5%" controls preload></image>
+  <image src="images/myprojects/ocuMount-explode.PNG" width="20.5%" controls preload></image>
   <image src="images/myprojects/watchCoverCollapse.jpg" width="19.3%" controls preload></image>
   <image src="images/myprojects/watchCoverExplode.jpg" width="20%" controls preload></image>
   <br>
