engr viz update

--- a/engineering.html
+++ b/engineering.html
@@ -112,16 +112,23 @@ main {
   <p>In my spare time, I design and 3D print some basic assemblies for simple functions as needed. I have investigated a variety of 3D modeling softwares and found that AutoDesk Fusion 360 has the most inclusive toolset for my projects.</p>
   <p>While designing and printing these relatively simple projects, I also investigate and retrofit my 3D printer as needed to improve quality and repeatability.</p>
   <em>Solidworks:</em><br>
-  <image src="images/myprojects/ocuMount-collapse.png" width="20%" controls preload></image>
-  <image src="images/myprojects/ocuMount-explode.PNG" width="20.5%" controls preload></image>
-  <image src="images/myprojects/watchCoverCollapse.jpg" width="19.3%" controls preload></image>
-  <image src="images/myprojects/watchCoverExplode.jpg" width="20%" controls preload></image>
+  <image src="images/myprojects/ocuMount-collapse.png" width="15%" controls preload></image>
+  <image src="images/myprojects/ocuMount-explode.PNG" width="15.3%" controls preload></image>
+  <image src="images/myprojects/watchCoverCollapse.jpg" width="14.5%" controls preload></image>
+  <image src="images/myprojects/watchCoverExplode.jpg" width="15%" controls preload></image>
+  <image src="images/myprojects/newGear-collapse.PNG" width="15.8%" controls preload></image>
+  <image src="images/myprojects/newGear-explode.PNG" width="15%" controls preload></image>
   <br>
   <em>3D Printer Modifications:</em><br>
   <image src="images/myprojects/lockingPlate-bedwire-guide.PNG" width="22%" controls preload></image>
   <image src="images/myprojects/lockingKnob-n-Plate-pic.PNG" width="17%" controls preload></image>
   <image src="images/myprojects/zinusTableEnclosure-Full.PNG" width="22%" controls preload></image>
   <image src="images/myprojects/zinusTableEnclosure-pic.PNG" width="28%" controls preload></image>
+  <br>
+  <em>3D Printer Enclosure Details:</em><br>
+  <image src="images/myprojects/zinusTableEnclosure-hingeClosup.PNG" width="29%" controls preload></image>
+  <image src="images/myprojects/zinusTableEnclosure-hingeClosup-transparency.PNG" width="27.5%" controls preload></image>
+  <image src="images/myprojects/zinusTableEnclosure-magnetLatch.PNG" width="12%" controls preload></image>
   <hr>
 </main>
 <hr>
