--- a/games.html
+++ b/games.html
@@ -113,7 +113,7 @@ main {
   <hr>
   <address>
     Contact Email:
-    <em><a href="mailto:bbwarne@g.clemson.edu">bbwarne@g.clemson.edu</a></em><br>
+    <em><a href="mailto:benbwarner@gmail.com">benbwarner@gmail.com</a></em><br>
     LinkedIn:
     <em><a href="https://www.linkedin.com/in/benjamin-b-warner">https://www.linkedin.com/in/benjamin-b-warner</a></em><br>
     Github:
