--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <br>
       </div>
       <div class="header-column">
-        <img src="images/self/logoReel.PNG" style="width:17vw;" class="center">
+        <img src="images/self/logoReel.png" style="width:17vw;" class="center">
       </div>
     </div>
 
