games in new window
prevents unwanted sound playing.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
-      width: 50%;
     }
     .tab {/* Style the tab */
       overflow: hidden;
@@ -380,8 +379,12 @@
           This game features randomly generated obstacles, collectibles, and enemies. The enemies have some AI path finding and seek to destroy the Phage.
           </p>
         <hr>
-          <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"  src="phageShift/webbuild.html" style="border:0px #000000 none;" name="PhageShift" scrolling="no" msallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px" marginwidth="320px" height="650px" width="1000px">
-          </iframe>
+          <image src="phageShift/phageShiftScreenshot.png" class= "center" width="30%" controls preload></image>
+          <button class="center" style="font-size:1vw; background-color:blue; color:white" onclick="window.location.href='phageShift/webbuild.html';">Click to play PhageShift Game!</button>      
+          <!--
+            <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"  src="phageShift/webbuild.html" style="border:0px #000000 none;" name="PhageShift" scrolling="no" msallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px" marginwidth="320px" height="650px" width="1000px">
+            </iframe>
+          -->
         <hr>
         <hr>
           <h2>SpiderCrane - on the Web:</h2>
@@ -393,8 +396,12 @@
           Summary: Pick up the flies that jiggle around randomly, trying to escape their binds. You can crawl around, then switch modes or switch legs which behave as a "crane game" and attempt to grab the flies and eat them.
           </p>
         <hr>
-          <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"  src="spiderWeb/webbuild.html" style="border:0px #000000 none;" name="SpiderCrane" scrolling="no" msallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px" marginwidth="320px" height="650px" width="1000px">
-          </iframe>
+          <image src="spiderWeb/spiderWebScreenshot.png" class= "center" width="30%" controls preload></image>
+          <button class="center" style="font-size:1vw; background-color:blue; color:white" onclick="window.location.href='spiderWeb/webbuild.html';">Click to play SpiderCrane Game!</button>      
+          <!--
+            <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"  src="spiderWeb/webbuild.html" style="border:0px #000000 none;" name="SpiderCrane" scrolling="no" msallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px" marginwidth="320px" height="650px" width="1000px">
+            </iframe>
+          -->
         <hr>
         <hr>
           <h2>aMAZEing:</h2>
@@ -406,8 +413,12 @@
           Summary: Play as an egg rolling through a "fridge" to gather ingredients. The fridge opens after collecting enough items to allow exiting the maze and features randomized locations for collectibles.
           </p>
         <hr>
-          <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"  src="mazeWeb/webbuild.html" style="border:0px #000000 none;" name="aMAZEingGame" scrolling="no" msallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px" marginwidth="320px" height="650px" width="1000px">
-          </iframe>
+          <image src="mazeWeb/mazeWebScreenshot.png" class= "center" width="30%" controls preload></image>
+          <button class="center" style="font-size:1vw; background-color:blue; color:white" onclick="window.location.href='mazeWeb/webbuild.html';">Click to play aMazeing Game!</button>          
+          <!--
+            <iframe mozallowfullscreen="true" allow="autoplay; fullscreen"  src="mazeWeb/webbuild.html" style="border:0px #000000 none;" name="aMAZEingGame" scrolling="no" msallowfullscreen="true" allowfullscreen="true" webkitallowfullscreen="true" allowtransparency="true" frameborder="0" marginheight="px" marginwidth="320px" height="650px" width="1000px">
+            </iframe>
+          -->
         <hr>
       </div>
 
